<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_text_label">Add</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="button_save_label">Save</string>
    <string name="action_add">Add</string>
    <string name="title_activity_add_new">Add New Item</string>
    <string name="add_title_hint">Enter Title</string>
    <string name="add_notes_hint">Notes (Optional)</string>
    <string name="add_date_hint">Pick a Date</string>
    <string name="title_hint">Enter Title</string>
    <string name="notes_hint">Notes (Optional)</string>
    <string name="date_hint">Pick a Date</string>
    <string name="label_add_priority">PRIORITY</string>
    <string name="label_add_due_date">DUE DATE</string>
    <string name="label_priority">PRIORITY</string>
    <string name="label_due_date">DUE DATE</string>
    <string name="button_add_save">Save</string>
    <string name="button_add_cancel">Cancel</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_cancel_label">Cancel</string>

</resources>
