<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.todoapp.activities.TodoItemActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/title_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_below="@id/etTitle"
        android:ems="10"
        android:id="@+id/etNotes"
        android:lines="2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/notes_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/indigo"
        android:text="@string/label_priority"
        android:id="@+id/tvPriority"
        android:layout_below="@id/etNotes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spPriority"
        android:layout_below="@id/tvPriority"
        android:layout_toRightOf="@id/tvPriority"
        android:layout_toEndOf="@id/tvPriority" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/indigo"
        android:text="@string/label_due_date"
        android:id="@+id/tvDueDate"
        android:layout_below="@id/spPriority"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_hint"
        android:id="@+id/tvDate"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_below="@id/tvDueDate"
        android:layout_alignRight="@id/spPriority"
        android:layout_alignEnd="@id/spPriority"
        android:layout_alignLeft="@id/spPriority"
        android:layout_alignStart="@id/spPriority" />

</RelativeLayout>
