<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.todoapp.activities.AddNewActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_title_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_below="@id/etAddTitle"
        android:ems="10"
        android:id="@+id/etAddNotes"
        android:lines="2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/add_notes_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/indigo"
        android:text="@string/label_add_priority"
        android:id="@+id/tvAddPriority"
        android:layout_below="@+id/etAddNotes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spAddPriority"
        android:layout_below="@+id/tvAddPriority"
        android:layout_toRightOf="@+id/tvAddPriority"
        android:layout_toEndOf="@+id/tvAddPriority" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/indigo"
        android:text="@string/label_add_due_date"
        android:id="@+id/tvAddDueDate"
        android:layout_below="@+id/spAddPriority"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_date_hint"
        android:id="@+id/tvAddDate"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_below="@+id/tvAddDueDate"
        android:layout_alignRight="@+id/spAddPriority"
        android:layout_alignEnd="@+id/spAddPriority"
        android:layout_alignLeft="@+id/spAddPriority"
        android:layout_alignStart="@+id/spAddPriority" />

</RelativeLayout>
