<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/notes" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:met_floatingLabel="normal"
        app:met_textColor="@color/white"
        app:met_baseColor="@color/white"
        app:met_textColorHint="@color/indigo_light"
        app:met_primaryColor="@color/yellow"
        app:met_floatingLabelTextColor="@color/yellow"
        app:met_maxCharacters="48"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textColor="@color/yellow"
        android:ellipsize="end"
        android:lines="2"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notes_hint"
        app:met_floatingLabel="normal"
        app:met_textColor="@color/white"
        app:met_baseColor="@color/white"
        app:met_textColorHint="@color/indigo_light"
        app:met_primaryColor="@color/yellow"
        app:met_floatingLabelTextColor="@color/yellow"
        app:met_errorColor="@color/orange"
        android:inputType="textMultiLine"
        android:lines="4"
        android:ellipsize="end"
        android:layout_alignBottom="@id/ivImage"
        android:layout_alignLeft="@id/etTitle"
        android:layout_alignRight="@id/etTitle" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/etNotes"
        android:paddingTop="16dp"
        android:text="@string/label_priority"
        android:textColor="@color/indigo"
        android:layout_marginLeft="16dp"
        android:textSize="@dimen/abc_text_size_caption_material" />

    <Spinner
        android:id="@+id/spPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPriority"
        android:layout_toEndOf="@id/tvPriority"
        android:layout_toRightOf="@id/tvPriority"
        android:layout_alignRight="@id/etTitle"/>

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/spPriority"
        android:paddingTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/label_due_date"
        android:textColor="@color/indigo"
        android:textSize="@dimen/abc_text_size_caption_material" />

    <TextView
        android:id="@+id/tvDate"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/spPriority"
        android:layout_alignLeft="@id/spPriority"
        android:layout_alignRight="@id/spPriority"
        android:layout_alignStart="@id/spPriority"
        android:layout_below="@id/tvDueDate"
        android:text="@string/date_hint" />

</RelativeLayout>
